# pctech

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  main.c
src/: PCTech.h  entity.h  hashMap.c  hashMap.h  scripting.c  scripting.h
src/assets/: assets.c  assets.h
src/game/: game.c  game.h
src/misc/: errors.h
src/structures/: kdTree.c  structures.h
